<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TableLayout
        android:background="#eeeeee"
        android:stretchColumns="*"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars = "vertical"
        android:id="@+id/tableLayout">
        <TableRow android:background="#cccccc"
            android:padding="5dp">
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name_title"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="4"
                android:editable="false" />
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:layout_weight="3" />
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/price_title"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_weight="3" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/name_add"
                android:gravity="center_horizontal"
                android:layout_column="0"
                android:maxLength="13"
                android:inputType="text"
                android:layout_weight="4"
                android:hint="@string/name_add" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/number_add"
                android:gravity="center_horizontal"
                android:layout_column="1"
                android:maxLength="8"
                android:inputType="text"
                android:layout_weight="3"
                android:hint="@string/number_add" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"

                android:id="@+id/price_add"
                android:gravity="center_horizontal"
                android:layout_column="2"
                android:maxLength="8"
                android:layout_weight="3"
                android:hint="@string/price_add" />
                android:maxLength="10" />
        </TableRow>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/add_button"
        android:layout_gravity="center_horizontal" />
    </TableLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/listView"
        android:layout_weight="1"
        android:longClickable="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView_sum"
        android:gravity="center|top"
        android:layout_gravity="bottom" />

</LinearLayout>



